--- a/GrupoSA-web/src/main/webapp/templates/mainAdmin.xhtml
+++ b/GrupoSA-web/src/main/webapp/templates/mainAdmin.xhtml
@@ -24,7 +24,7 @@
                         <h4 class="titulo3">Santo Ángel</h4>
                         <h5 class="titulo4">Administración</h5>
 
-                        <c:if test="#{controlAutorizacion.socio.getPerfil() == 'ROOT'}">
+                        <c:if test="#{controlAutorizacion.socio.perfil == Rol_perfil.ROOT}">
                             <a href="#menu1" class="list-group-item d-inline-block collapsed" data-toggle="collapse" aria-expanded="false"><i class="fas fa-list-ul"></i> <span class="d-none d-md-inline">Socios </span></a>
                             <div class="collapse" id="menu1" data-parent="#sidebar">
                                 <a href="sociosLista.xhtml" class="list-group-item" data-parent="#menu1">Lista de Socios</a>
@@ -85,7 +85,7 @@
                             </div>
                             
                         </c:if>
-                        <c:if test="#{controlAutorizacion.socio.getPerfil() == 'SCOUT'}">
+                        <c:if test="#{controlAutorizacion.socio.perfil == Rol_perfil.SCOUT}">
                             <a href="#menu1" class="list-group-item d-inline-block collapsed" data-toggle="collapse" aria-expanded="false"><i class="fas fa-list-ul"></i> <span class="d-none d-md-inline">Socios </span></a>     
                             <div class="collapse" id="menu1" data-parent="#sidebar">
                                 <a href="sociosLista.xhtml" class="list-group-item" data-parent="#menu1">Lista de Socios</a>
