--- a/GrupoSA-web/src/main/webapp/templates/menu.xhtml
+++ b/GrupoSA-web/src/main/webapp/templates/menu.xhtml
@@ -52,7 +52,7 @@
                 <c:if test="#{!empty controlAutorizacion.socio}">
                     <ul class="navbar-nav text-center">
                         <h:form>
-                            <c:if test="#{controlAutorizacion.socio.getPerfil() == 'ROOT' || controlAutorizacion.socio.getPerfil() == 'SCOUT'}">
+                            <c:if test="#{controlAutorizacion.socio.perfil == Rol_perfil.ROOT || controlAutorizacion.socio.perfil == Rol_perfil.SCOUT}">
                                 <li class="nav-item">
                                     <h:commandLink class="nav-link" action="indexAdmin.xhtml"><i class="fab fa-whmcs"></i> <strong>Administrar</strong></h:commandLink>
                                 </li>
@@ -61,10 +61,10 @@
                         <h:form a:action="datosUsuario.xhtml">
                             <li class="nav-item">
                                 <h:commandLink  class="nav-link" action="datosUsuario.xhtml" style="font-weight: bold">                    
-                                    <c:if test="#{controlAutorizacion.socio.getPerfil() == 'ROOT' || controlAutorizacion.socio.getPerfil() == 'SCOUT'}">
+                                    <c:if test="#{controlAutorizacion.socio.perfil == Rol_perfil.ROOT || controlAutorizacion.socio.perfil == Rol_perfil.SCOUT}">
                                         <img style="background-color: white" class="icono_scout" src="resources/icons/admin.png"/>
                                     </c:if>
-                                    <c:if test="#{controlAutorizacion.socio.getPerfil() != 'SCOUT' and controlAutorizacion.socio.getPerfil() != 'ROOT'}">
+                                    <c:if test="#{controlAutorizacion.socio.perfil != Rol_perfil.ROOT and controlAutorizacion.socio.perfil != Rol_perfil.SCOUT}">
                                         <img class="icono_scout" src="resources/icons/#{controlAutorizacion.socio.getSeccion().getNombre()}.png"/>
                                     </c:if>
                                     <c:if test="#{!empty controlAutorizacion.socio.getNombre()}">
