--- a/GrupoSA-web/src/main/webapp/templates/mainAdmin.xhtml
+++ b/GrupoSA-web/src/main/webapp/templates/mainAdmin.xhtml
@@ -105,7 +105,7 @@
 
                     </div>
                 </div>
-                <main class="col-md-10 float-left col px-5 pl-md-2 pt-2 main">
+                <main class="col-md-10 float-left col px-5 pl-md-2 pt-2 main" style="overflow:scroll;max-height: 750px">
                     <div style="min-height: 30px">
                         <c:if test="#{!empty controlAutorizacion.socio}">
                             <h:form>
