--- a/GrupoSA-web/src/main/webapp/templates/lateralMenu.xhtml
+++ b/GrupoSA-web/src/main/webapp/templates/lateralMenu.xhtml
@@ -10,7 +10,7 @@
             <a id="lateraldatosUsuario" href="datosUsuario.xhtml" class="list-group-item list-group-item-action lateraldatosUsuario">Mis Datos</a>
             <a id="lateralmisDocumentos" href="misDocumentos.xhtml" class="list-group-item list-group-item-action lateralmisDocumentos">Mis Documentos</a>
             <h:form a:action="misNotificaciones.xhtml" id="formNotificacion">
-            <h:commandLink id="lateralmisNotificaciones" action="#{notificacionesBB.irNotif()}" class="list-group-item list-group-item-action lateralmisNotificaciones">Notificaciones</h:commandLink>
+            <h:commandLink id="lateralmisNotificaciones" action="#{notificacionesBB.irNotif(controlAutorizacion.socio.id_Usuario)}" class="list-group-item list-group-item-action lateralmisNotificaciones">Notificaciones</h:commandLink>
             </h:form>
         </div>
         
