--- a/GrupoSA-web/src/main/webapp/templates/menu.xhtml
+++ b/GrupoSA-web/src/main/webapp/templates/menu.xhtml
@@ -84,7 +84,7 @@
 
                        <li class="nav-item" style="padding-top: 22px;">
                             <h:form>
-                                <h:commandLink action="#{notificacionesBB.irNotif()}" class="icono_noti">
+                                <h:commandLink action="#{notificacionesBB.irNotif(controlAutorizacion.socio.id_Usuario)}" class="icono_noti">
                                 
                                 <i class="fas fa-bell"></i>
                                 <c:if test="#{notificacionesBB.noLeidas >0}">
